--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "country-state-city": "^3.2.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.461.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
